// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="mmexwp3d43z5"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="mmexwp3d43z5"
  >
    Description
  </div>
</ds-field>
`;

exports[`Inline 1`] = `
<fieldset>
  <legend data-weight="medium">
    Kontaktes på e-post?
  </legend>
  <p data-variant="default">
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-6);">
    <ds-field>
      <input
        id="undefined-inline-ja"
        type="radio"
        value="ja"
        name="my-inline"
      >
      <label data-weight="regular">
        Ja
      </label>
    </ds-field>
    <ds-field>
      <input
        id="undefined-inline-nei"
        type="radio"
        value="nei"
        name="my-inline"
      >
      <label data-weight="regular">
        Nei
      </label>
    </ds-field>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="mmexwp3d43z1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="mmexwp3d43z1"
  >
    Description
  </div>
</ds-field>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="radio-in-color-context">
    <input
      id="radio-in-color-context"
      type="radio"
      checked
      aria-describedby="mmexwp3d43z4"
    >
    <label
      data-weight="regular"
      for="radio-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="mmexwp3d43z4"
    >
      Description
    </div>
  </ds-field>
</div>
`;
